# beets-getlrc

./: ANALYSIS.md  ANALYSIS_INDEX.md  BUG_CHECK_FINAL_REPORT.md  BUG_REPORT.md  COMPLETE_ANALYSIS.md  EXECUTIVE_SUMMARY.md  README.md  pyproject.toml
beets_getlrc.egg-info/: PKG-INFO  SOURCES.txt
beetsplug/getlrc/: __init__.py
tests/: comprehensive_bug_check.py  quick_bug_check.py  test_cache_and_fetch.py  test_getlrc_edgecases.py  test_http_error_handling.py  test_lrc_stays_with_flac.py  test_plain_lrc.py  verify_fixes.py
