[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beets-getlrc"
version = "0.1.9"
description = "Fetch synced .lrc lyrics from lrclib.net for beets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "beets>=2.0.0",
    "requests",
]

[project.urls]
Homepage = "https://github.com/YOURNAME/beets-getlrc"

[project.entry-points."beets.plugins"]
getlrc = "beetsplug.getlrc:GetLrcPlugin"